--- a/.gitignore
+++ b/.gitignore
@@ -205,4 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-*.safetensors
+
+# Model files - ignore original large files but allow split parts
+model-00001-of-00002.safetensors
+model-00002-of-00002.safetensors
+# But allow split parts:
+!*.safetensors.part*
