--- a/.gitignore
+++ b/.gitignore
@@ -206,8 +206,5 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-# Model files - ignore original large files but allow split parts
-model-00001-of-00002.safetensors
-model-00002-of-00002.safetensors
-# But allow split parts:
-!*.safetensors.part*
+# Model files - only ignore the original large file that we split
+DeltaMCP/starcoder-finetuned/models/phi-2/model-00001-of-00002.safetensors
