--- a/DeltaMCP/llm-finetuned/sft-runs/run-$(date +%Y%m%d-%H%M%S)/checkpoint-600/adapter_config.json
+++ b/DeltaMCP/llm-finetuned/sft-runs/run-$(date +%Y%m%d-%H%M%S)/checkpoint-600/adapter_config.json
@@ -1,8 +1,9 @@
 {
   "alpha_pattern": {},
   "auto_mapping": null,
-  "base_model_name_or_path": "bigcode/starcoderbase-1b",
+  "base_model_name_or_path": "bigcode/starcoder",
   "bias": "none",
+  "corda_config": null,
   "eva_config": null,
   "exclude_modules": null,
   "fan_in_fan_out": false,
@@ -14,20 +15,22 @@
   "loftq_config": {},
   "lora_alpha": 32,
   "lora_bias": false,
-  "lora_dropout": 0.05,
+  "lora_dropout": 0.1,
   "megatron_config": null,
   "megatron_core": "megatron.core",
   "modules_to_save": null,
   "peft_type": "LORA",
-  "r": 16,
+  "qalora_group_size": 16,
+  "r": 8,
   "rank_pattern": {},
   "revision": null,
   "target_modules": [
-    "c_fc",
-    "c_attn",
-    "c_proj"
+    "c_attn"
   ],
+  "target_parameters": null,
   "task_type": "CAUSAL_LM",
+  "trainable_token_indices": null,
   "use_dora": false,
+  "use_qalora": false,
   "use_rslora": false
 }
