--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*.pt filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+*.pt filter=lfs diff=lfs merge=lfs -text
+checkpoints/* filter=lfs diff=lfs merge=lfs -text
 *.safetensors filter=lfs diff=lfs merge=lfs -text
 checkpoints/** filter=lfs diff=lfs merge=lfs -text
